Add Chamud.html by Chamud

--- a/Chamud/Chamud.html
+++ b/Chamud/Chamud.html
@@ -4,6 +4,6 @@
         <title>Hello GitHub!</title>
     </head>
     <body>
-        <p>Greetings from Chamud...</p>
+        <p>Greetings from Chamud..</p>
     </body>
 </html>
